# finadviser

./: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.next/: trace  trace-build
docs/: REVIEW_AND_IMPROVEMENT_PLAN.md
finadviser/: __init__.py  __main__.py  cli.py  config.py  seed_properties.py
finadviser/analysis/: claude_client.py  conversation.py  data_preparer.py  prompts.py  schemas.py
finadviser/db/: connection.py  models.py  repositories.py  schema.py
finadviser/importing/: bank_config.py  categorizer.py  csv_parser.py  duplicate_detector.py  import_pipeline.py
finadviser/importing/bank_configs/: template.yaml
finadviser/properties/: equity_calculator.py  mortgage_tracker.py  rental_tracker.py  transfer_engine.py
finadviser/ui/: app.py
finadviser/ui/screens/: chat.py  dashboard.py  import_wizard.py  properties.py  settings.py  transactions.py
finadviser/ui/styles/: app.tcss
finadviser/ui/widgets/: chat_message.py  equity_bar.py  net_worth_card.py  transaction_table.py
finadviser/utils/: formatting.py  hashing.py
tests/: conftest.py
tests/fixtures/: sample_bank_config.yaml  sample_transactions.csv
tests/test_analysis/: test_analysis.py
tests/test_db/: test_schema.py
tests/test_importing/: test_import.py
tests/test_properties/: test_equity.py  test_seed.py
web/: .env.example  .gitignore  drizzle.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
web/drizzle/: 0000_init.sql
web/scripts/: hash-password.mjs  migrate.mjs
web/src/: middleware.ts
(+241 files in other folders)
